<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal">

    <RadioGroup
        android:id="@+id/rgTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbDvd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RadioButton
            android:id="@+id/rbDvd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_dvd"
            android:layout_marginTop="@dimen/minimo"/>
        <RadioButton
            android:id="@+id/rbVhs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_vhs"
            android:layout_marginTop="@dimen/minimo"/>
        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/da_blue"
            android:layout_marginTop="@dimen/minimo"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitulo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/minimo"
        android:hint="@string/da_titulo"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:helperText="@string/da_requerido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/rgTipo"
        app:layout_constraintTop_toTopOf="@id/rgTipo">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etTitulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPublicacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minimo"
        android:hint="@string/da_ano"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:helperText="@string/da_publicacion"
        app:layout_constraintBottom_toBottomOf="@+id/rgTipo"
        app:layout_constraintStart_toStartOf="@id/tilTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tilTitulo">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPublicacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxEms="4"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDvdZona"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minimo"
        android:hint="@string/da_zona"
        android:visibility="gone"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:helperText="@string/da_requerido"
        app:layout_constraintEnd_toEndOf="@id/tilTitulo"
        app:layout_constraintTop_toBottomOf="@id/tilTitulo"
        app:layout_constraintBottom_toBottomOf="@+id/rgTipo">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDvdZona"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilVhsFabricacion"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/minimo"
        android:hint="@string/da_ano"
        android:visibility="gone"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        app:helperText="@string/da_fabricacion"
        app:layout_constraintEnd_toEndOf="@id/tilTitulo"
        app:layout_constraintTop_toBottomOf="@id/tilTitulo"
        app:layout_constraintBottom_toBottomOf="@+id/rgTipo">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etVhsFabricacion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="4"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imgPortada"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/minimo"
        android:background="@color/color_fondo_portada"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toStartOf="@id/rgTipo"
        app:layout_constraintEnd_toEndOf="@id/tilTitulo"
        app:layout_constraintTop_toBottomOf="@id/rgTipo"/>
    <ImageButton
        android:id="@+id/btnBuscarImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/minimo"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_search"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toStartOf="@id/rgTipo"
        app:layout_constraintEnd_toEndOf="@id/tilTitulo"
        app:layout_constraintTop_toBottomOf="@id/rgTipo"/>

</androidx.constraintlayout.widget.ConstraintLayout>