<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.moappdev.blowbuster.dialog.AgregarViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/normal">

        <RadioGroup
            android:id="@+id/rgTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rbDvd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RadioButton
                android:id="@+id/rbDvd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_dvd"
                android:onClick="@{()->viewmodel.onDvd()}"
                android:layout_marginTop="@dimen/minimo" />
            <RadioButton
                android:id="@+id/rbVhs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_vhs"
                android:onClick="@{()->viewmodel.onVhs()}"
                android:layout_marginTop="@dimen/minimo"/>
            <RadioButton
                android:id="@+id/rbBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_blue"
                android:onClick="@{()->viewmodel.onBlue()}"
                android:layout_marginTop="@dimen/minimo"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/minimo"
            android:hint="@string/da_titulo"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/rgTipo"
            app:layout_constraintTop_toTopOf="@id/rgTipo">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewmodel.titulo}"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPublicacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/da_ano"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:helperText="@string/da_publicacion"
            app:layout_constraintBottom_toBottomOf="@+id/rgTipo"
            app:layout_constraintStart_toStartOf="@id/tilTitulo"
            app:layout_constraintTop_toBottomOf="@+id/tilTitulo">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPublicacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="4"
                android:text="@={viewmodel.publicacion}"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDvdZona"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/da_zona"
            android:visibility="@{viewmodel.dvd}"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:helperText="@string/da_requerido"
            app:layout_constraintEnd_toEndOf="@id/tilTitulo"
            app:layout_constraintTop_toBottomOf="@id/tilTitulo"
            app:layout_constraintBottom_toBottomOf="@+id/rgTipo">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etDvdZona"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="4"
                android:maxLength="1"
                android:text="@={viewmodel.zonaDvd}"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVhsFabricacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minimo"
            android:hint="@string/da_ano"
            android:visibility="@{viewmodel.vhs}"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:helperText="@string/da_fabricacion"
            app:layout_constraintEnd_toEndOf="@id/tilTitulo"
            app:layout_constraintTop_toBottomOf="@id/tilTitulo"
            app:layout_constraintBottom_toBottomOf="@+id/rgTipo">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etVhsFabricacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="4"
                android:maxLength="4"
                android:text="@={viewmodel.fabVhs}"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgPortada"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/minimo"
            android:background="@color/color_fondo_portada"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintStart_toStartOf="@id/rgTipo"
            app:layout_constraintEnd_toEndOf="@id/tilTitulo"
            app:layout_constraintTop_toBottomOf="@id/rgTipo"/>
        <ImageButton
            android:id="@+id/btnBuscarImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/minimo"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_search"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintStart_toStartOf="@id/rgTipo"
            app:layout_constraintEnd_toEndOf="@id/tilTitulo"
            app:layout_constraintTop_toBottomOf="@id/rgTipo"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAgregar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/da_agregar"
            android:layout_marginTop="@dimen/normal"
            android:onClick="@{()->viewmodel.agregar()}"
            app:layout_constraintEnd_toEndOf="@id/imgPortada"
            app:layout_constraintTop_toBottomOf="@id/imgPortada"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/da_cancelar"
            android:layout_marginEnd="@dimen/normal"
            app:layout_constraintEnd_toStartOf="@id/btnAgregar"
            app:layout_constraintTop_toTopOf="@id/btnAgregar"
            style="?attr/materialButtonOutlinedStyle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>